--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mongoose_skeleton",
   "version": "1.0.0",
+  "description": "",
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -12,10 +13,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "build": "^0.1.4",
-    "express": "^4.17.1",
-    "mongoose": "^5.13.9",
-    "morgan": "^1.10.0"
+    "express": "^4.16.3",
+    "mongoose": "^5.3.16",
+    "morgan": "^1.9.1"
   },
-  "description": ""
+  "devDependencies": {
+    "nodemon": "^2.0.12"
+  }
 }
